# single-quote-keys

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/sqk/: __init__.py  cli.py  config.py  constants.py  filesystem.py  processor.py  strings.py  transformer.py
tests/: __init__.py  conftest.py  test_cli.py  test_filesystem_and_config.py  test_strings.py  test_transformer.py  test_transformer_textual.py
